--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "min"]
     path = min
-    url = http://gitlab.kashuo.net/uigroup/ksmin.git
+    url = http://zhangdazhu:qazks123@gitlab.kashuo.net/uigroup/ksmin.git
