--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "webpack --watch"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "babel-runtime": "^6.0.0",
     "blueimp-md5": "^2.3.0",
     "lodash": "^4.13.1",
@@ -31,7 +32,6 @@
     "babel-preset-stage-0": "^6.1.2",
     "babel-preset-stage-1": "^6.5.0",
     "babel-preset-stage-3": "^6.17.0",
-    "babel-runtime": "^6.0.0",
     "browser-sync": "^2.18.2",
     "browser-sync-webpack-plugin": "^1.1.3",
     "clean-webpack-plugin": "^0.1.10",
