--- a/package.json
+++ b/package.json
@@ -12,15 +12,11 @@
     "build": "webpack --watch"
   },
   "dependencies": {
-    "animate.css": "^3.5.2",
     "babel-runtime": "^6.0.0",
-    "blueimp-md5": "^2.3.0",
-    "lodash": "^4.13.1",
     "vue": "1.0.17",
     "vue-resource": "0.7.0",
     "vue-router": "0.7.11",
-    "vue-validator": "2.1.3",
-    "vuex": "0.6.3"
+    "vue-validator": "2.1.3"
   },
   "devDependencies": {
     "babel-core": "^6.1.21",
