--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "normalize.css": "^6.0.0",
     "vue": "1.0.17",
     "vue-resource": "0.7.0",
     "vue-router": "0.7.11",
