添加单独导出一个或多个文件

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "develop": "node build/dev-server.js",
     "pro": "node build/pro.js",
-    "components": "node build/components.js",
-    "min": "node build/min.js",
+    "min": "npm run execmin",
+    "execmin": "node build/min.js",
     "build": "webpack --watch"
   },
   "dependencies": {
