--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "zhangjie <zhangjie@kashuo.com>",
   "scripts": {
     "develop": "node build/dev-server.js",
-    "unit": "karma start test/unit/karma.conf.js --single-run",
+    "unit": "karma start test/unit/karma.conf.js --auto-watch",
     "pro": "node build/pro.js",
     "min": "npm run execmin",
     "execmin": "node build/min.js",
